<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_map_type_normal"
        android:orderInCategory="100"
        android:title="@string/menu_map_type_normal"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_map_type_hybrid"
        android:orderInCategory="100"
        android:title="@string/menu_map_type_hybrid"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_map_type_satellite"
        android:orderInCategory="100"
        android:title="@string/menu_map_type_satellite"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_map_type_terrain"
        android:orderInCategory="100"
        android:title="@string/menu_map_type_terrain"
        app:showAsAction="never" />
</menu>