<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/tvDateWaterShow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="24.09.1979"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintRight_toLeftOf="@+id/tvDateWaterStay"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tilShowWater" />

    <TextView
        android:id="@+id/tvDateWaterStay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="24.09.1979"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tvDateWaterShow"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tilStayWater" />

    <TextView
        android:id="@+id/type_text_excavation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/type_text_exc"
        app:layout_constraintBaseline_toBaselineOf="@+id/spTypeExc"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Spinner
        android:id="@+id/spTypeExc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:entries="@array/exc_array"
        app:layout_constraintLeft_toRightOf="@+id/type_text_excavation"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvStart"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/dateStart"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tvStartDate"
        app:layout_constraintTop_toBottomOf="@+id/tilAbsoluteElevation" />

    <TextView
        android:id="@+id/tvStartDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="24.09.1979"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvEndDate"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/tvStart"
        app:layout_constraintRight_toLeftOf="@+id/tvEnd" />

    <TextView
        android:id="@+id/tvEnd"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/dateEnd"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/tvStartDate"
        app:layout_constraintRight_toLeftOf="@+id/tvEndDate"
        app:layout_constraintTop_toBottomOf="@+id/tilAbsoluteElevation" />

    <TextView
        android:id="@+id/tvEndDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="24.09.1979"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/tvEnd"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilAbsoluteElevation" />

    <ImageButton
        android:id="@+id/ibGetCoordinate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/ic_my_location_black_24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/tvDateWaterStay" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="288dp"
        tools:layout_editor_absoluteX="288dp"
        tools:layout_editor_absoluteY="0dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEnd">

        <EditText
            android:id="@+id/etDescriptionExcavation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilNumberEx"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tilAbsoluteElevation"
        app:layout_constraintTop_toBottomOf="@+id/spTypeExc">

        <EditText
            android:id="@+id/etNumberExc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/number_text_exc"
            android:textSize="14sp" />

        <requestFocus />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilAbsoluteElevation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@+id/tilNumberEx"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spTypeExc">

        <EditText
            android:id="@+id/etAbsoluteElevation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etAbsoluteElevation"
            android:inputType="numberDecimal"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/etNumberExc" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilWho"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="11dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tilHow"
        app:layout_constraintTop_toBottomOf="@+id/tilLatitude">

        <EditText
            android:id="@+id/etWho"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etWho"
            android:inputType="text"
            android:textSize="14sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilHow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@+id/tilWho"
        app:layout_constraintRight_toLeftOf="@+id/tilThan"
        app:layout_constraintTop_toBottomOf="@+id/tilLongitude">

        <EditText
            android:id="@+id/etHow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etHow"
            android:inputType="text"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilLongitude"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toRightOf="@+id/tilLatitude"
        app:layout_constraintRight_toLeftOf="@+id/ibGetCoordinate"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvDateWaterStay">

        <EditText
            android:id="@+id/etLongitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/tvLongitude"
            android:inputType="numberDecimal"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilStayWater"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/tilShowWater"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tilDescription"
        android:layout_marginEnd="8dp">

        <EditText
            android:id="@+id/etStayWater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etStayWater"
            android:inputType="numberDecimal"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/etNumberExc" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilShowWater"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tilStayWater"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tilDescription"
        android:layout_marginStart="8dp">

        <EditText
            android:id="@+id/etShowWater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etShowWater"
            android:inputType="numberDecimal"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilLatitude"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tilLongitude"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvDateWaterShow">

        <EditText
            android:id="@+id/etLatitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/tvLatitude"
            android:inputType="numberDecimal"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilThan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="9dp"
        app:layout_constraintLeft_toRightOf="@+id/tilHow"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilLongitude">

        <EditText
            android:id="@+id/etThan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etThan"
            android:inputType="text"
            android:textSize="14sp" />

    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>